# HiveStatus

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: configuration.rs  main.rs  routes.rs  startup.rs
static/: app.js  index.html  style.css
tests/: integration_test.rs
